--- a/index.html
+++ b/index.html
@@ -36,44 +36,60 @@
     /* Header */
     header{
       background:linear-gradient(180deg,var(--navy),#0f2740);
-      color:#fff;
-      padding:90px 20px 50px; /* 로고 크기에 맞춰 넉넉하게 */
+      color:#fff; padding:40px 20px 28px;
       border-bottom:4px solid var(--primary);
     }
     .wrap{max-width:1100px;margin:0 auto}
-    .brand{display:flex;align-items:center;gap:24px;margin-bottom:20px}
+
+    /* 로고/브랜드 */
+    .brand{
+      display:flex;
+      align-items:center;
+      gap:20px;
+      margin-bottom:12px;
+      flex-wrap:wrap; /* 모바일 대응 */
+    }
     .brand img{
-      height:250px; /* ✅ 크게 확대 */
+      height:250px;
       width:auto;
       display:block;
-      filter: drop-shadow(0 0 4px rgba(255,255,255,.8));
+      filter: drop-shadow(0 0 4px rgba(255,255,255,.7));
     }
     @media (max-width:640px){
-      .brand img{height:140px}
+      .brand{
+        flex-direction:column; 
+        text-align:center;
+      }
+      .brand img{height:160px}
     }
-    .brand .wordmark{font-weight:800;letter-spacing:.5px;font-size:22px;color:#fff}
+    .brand .wordmark{
+      font-weight:700;
+      font-size:22px;
+      color:#fff;
+      opacity:0.9;
+    }
 
+    /* 네비게이션 */
     .site-nav{
       position:sticky; top:0; z-index:50;
-      background:rgba(11,27,43,.9);
-      backdrop-filter:saturate(120%) blur(6px);
-      display:flex; gap:22px;
-      padding:16px 16px;
-      margin:24px -12px 36px;
-      border:1px solid rgba(255,255,255,.08);
-      border-radius:10px;
+      background:rgba(11,27,43,.9); backdrop-filter:saturate(120%) blur(6px);
+      display:flex; gap:22px; padding:12px 12px; margin:12px -12px 22px;
+      border:1px solid rgba(255,255,255,.08); border-radius:10px;
+      flex-wrap:wrap;
+      justify-content:center;
     }
     .site-nav a{color:#fff;text-decoration:none;font-weight:600}
     .site-nav a:hover{color:#cfe6ff;text-decoration:underline}
 
-    .badge{display:inline-block;background:#cfe6ff14;color:#e8f1ff;padding:6px 12px;border-radius:999px;font-size:13px;border:1px solid #2a4265}
-    .hero h1{font-size:42px;margin:18px 0 14px}
-    .hero p{color:#E5E7EB;margin:0 0 28px}
+    /* Hero */
+    .badge{display:inline-block;background:#cfe6ff14;color:#e8f1ff;padding:5px 10px;border-radius:999px;font-size:12px;border:1px solid #2a4265}
+    .hero h1{font-size:38px;margin:12px 0 10px;text-align:center}
+    .hero p{color:#E5E7EB;margin:0 0 24px;text-align:center}
 
-    .btn-row{display:flex;gap:14px;flex-wrap:wrap}
-    .cta{display:inline-block;background:var(--primary);color:#fff;padding:16px 22px;border-radius:10px;text-decoration:none;font-weight:700;border:1px solid rgba(255,255,255,.08);transition:.18s}
+    .btn-row{display:flex;gap:12px;flex-wrap:wrap;justify-content:center}
+    .cta{display:inline-block;background:var(--primary);color:#fff;padding:14px 20px;border-radius:10px;text-decoration:none;font-weight:700;border:1px solid rgba(255,255,255,.08);transition:.18s}
     .cta:hover{transform:translateY(-3px);background:#004a92}
-    .ghost{display:inline-block;padding:14px 18px;border-radius:10px;border:1px solid var(--border);text-decoration:none;color:#0b1b2b;background:#fff}
+    .ghost{display:inline-block;padding:12px 16px;border-radius:10px;border:1px solid var(--border);text-decoration:none;color:#0b1b2b;background:#fff}
 
     /* Sections */
     section{padding:56px 20px;border-bottom:1px solid var(--border)}
@@ -122,6 +138,8 @@
         <img src="logo.png" alt="유아플랜 로고" />
         <div class="wordmark">정책자금 컨설팅</div>
       </div>
+
+      <!-- 네비게이션 -->
       <nav class="site-nav">
         <a href="#about">회사소개</a>
         <a href="#services">서비스</a>
@@ -130,9 +148,12 @@
         <a href="#faq">FAQ</a>
         <a href="#contact">문의하기</a>
       </nav>
+
+      <!-- Hero -->
       <span class="badge">표준화 DB · 요건 매칭 · 컨설턴트 최종 판단</span>
       <h1>정책자금, <u>유아플랜 프로그램</u>이 분석하고 <u>전문가가 결정</u>합니다.</h1>
       <p>실시간 공고·요건을 표준화 데이터로 분석하고, 전문가가 상황에 맞는 매칭을 투명하게 제시합니다.</p>
+
       <div class="btn-row">
         <a class="cta" href="https://survey.youareplan.co.kr" target="_blank">1분 만에 1차 진단 시작</a>
         <a class="ghost" href="#apply">페이지에서 바로 작성</a>
@@ -151,11 +172,6 @@
           <div class="card"><strong>요건 매칭</strong><br>업력·업종·체납 등 핵심 조건을 한눈에 정리합니다.</div>
           <div class="card"><strong>사람이 최종 판단</strong><br>AI 분석을 보조로, 컨설턴트가 책임 있게 안내합니다.</div>
         </div>
-        <div class="trust" style="margin-top:18px">
-          <span class="tag">개인정보 최소수집·목적외 이용 금지</span>
-          <span class="tag">진행 단계·결과 리포트 제공</span>
-          <span class="tag">컴플라이언스 최우선</span>
-        </div>
       </div>
     </section>
 
@@ -168,18 +184,10 @@
           <div class="card"><strong>② 컨설팅 & 서류 준비</strong><br>신청 전략 수립, 증빙 체크리스트, 제출 문서 검토/작성까지 전담 지원.</div>
           <div class="card"><strong>③ 실행 & 사후 추적</strong><br>접수/심사·보완 대응, 결과 리포트, 차기 스텝 가이드 제공.</div>
         </div>
-        <h3 style="margin:26px 0 10px">진행 절차</h3>
-        <ol class="process">
-          <li>정보 수집 (기업마당·소진공·신보 등)</li>
-          <li>요건 매칭 (업력·업종·세금체납 여부)</li>
-          <li>결과 요약 및 우선순위 제시</li>
-          <li>상담/서류 준비</li>
-          <li>신청·실행 및 추적</li>
-        </ol>
       </div>
     </section>
 
-    <!-- 공지사항 -->
+    <!-- 공지 -->
     <section id="notice">
       <div class="wrap">
         <h2>공지사항</h2>
@@ -256,6 +264,7 @@
     </div>
   </footer>
 
+  <!-- Back to top -->
   <a class="top" href="#top">맨 위로</a>
 </body>
 </html>
