--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
           <div class="card">
             <strong>사업자 정보</strong>
             <div class="table" style="margin-top:10px">
-              <div class="row"><div class="cell head">상호</div><div class="cell">유아플랜 컨설팅</div></div>
+              <div class="row"><div class="cell head">상호</div><div class="cell">유아플랜</div></div>
               <div class="row"><div class="cell head">사업자번호</div><div class="cell">515-10-64034</div></div>
               <div class="row"><div class="cell head">대표</div><div class="cell">김대환</div></div>
               <div class="row"><div class="cell head">웹사이트</div><div class="cell"><a href="https://youareplan.co.kr">youareplan.co.kr</a></div></div>
