Refactor HTML structure and update styles

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       --bg:#ffffff;
       --radius:12px;
       --shadow:0 6px 24px rgba(16,24,40,.06);
+      --kakao:#FEE500;
     }
     *{box-sizing:border-box}
     html{scroll-behavior:smooth}
@@ -48,7 +49,7 @@
     }
     .wrap{max-width:1100px;margin:0 auto}
 
-    /* 브랜드 영역: 로고가 메인, 서브 타이틀은 보조 */
+    /* 브랜드 영역 */
     .brand{
       display:flex;
       flex-direction:column;
@@ -57,20 +58,20 @@
       text-align:center;
     }
     .brand img{
-      height:250px;           /* 데스크톱에서 크게 보이게 */
+      height:250px;
       width:auto;
       display:block;
       filter:drop-shadow(0 0 4px rgba(255,255,255,.85));
     }
     .brand .wordmark{
       font-weight:700;
-      font-size:20px;         /* 보조 타이틀(작게) */
+      font-size:20px;
       color:#e9eef7;
       letter-spacing:.2px;
       opacity:.95;
     }
     @media (max-width:640px){
-      .brand img{height:190px}  /* 모바일에서도 로고 크게 유지 */
+      .brand img{height:190px}
       .brand .wordmark{font-size:16px}
     }
 
@@ -99,7 +100,7 @@
       text-align:center;
     }
 
-    /* 히어로 카피는 로고보다 약하게 */
+    /* 히어로 */
     .hero h1{
       font-size:34px;
       margin:16px 0 10px;
@@ -116,18 +117,48 @@
     }
 
     .btn-row{
-      display:flex;gap:12px;flex-wrap:wrap;justify-content:center
+      display:flex;
+      gap:12px;
+      flex-wrap:wrap;
+      justify-content:center;
     }
     .cta{
-      display:inline-block;background:var(--primary);color:#fff;
-      padding:14px 20px;border-radius:10px;text-decoration:none;font-weight:700;
-      border:1px solid rgba(255,255,255,.08);transition:.18s
+      display:inline-block;
+      background:var(--primary);
+      color:#fff;
+      padding:14px 20px;
+      border-radius:10px;
+      text-decoration:none;
+      font-weight:700;
+      border:1px solid rgba(255,255,255,.08);
+      transition:.18s;
+      text-align:center;
+      min-width:220px;
     }
     .cta:hover{transform:translateY(-3px);background:#004a92}
     .ghost{
-      display:inline-block;padding:12px 16px;border-radius:10px;border:1px solid var(--border);
-      text-decoration:none;color:#0b1b2b;background:#fff
+      display:inline-block;
+      padding:12px 16px;
+      border-radius:10px;
+      border:1px solid var(--border);
+      text-decoration:none;
+      color:#0b1b2b;
+      background:#fff;
     }
+    .cta-kakao{
+      display:inline-block;
+      background:var(--kakao);
+      color:#111827;
+      padding:14px 20px;
+      border-radius:10px;
+      text-decoration:none;
+      font-weight:700;
+      border:1px solid rgba(0,0,0,.08);
+      transition:.18s;
+      text-align:center;
+      min-width:220px;
+    }
+    .cta-kakao:hover{transform:translateY(-3px);filter:brightness(0.96);}
 
     /* 공통 섹션 */
     section{padding:56px 20px;border-bottom:1px solid var(--border)}
@@ -149,7 +180,13 @@
     .head{background:#f8fafc;font-weight:700}
 
     /* 설문 임베드 */
-    iframe{width:100%;border:1px solid var(--border);border-radius:var(--radius);min-height:720px;background:#fff}
+    iframe{
+      width:100%;
+      border:1px solid var(--border);
+      border-radius:var(--radius);
+      min-height:720px;
+      background:#fff;
+    }
 
     /* Footer */
     footer{padding:36px 20px;color:#6b7280;background:#f9fafb}
@@ -160,7 +197,8 @@
     /* Back-to-top */
     .top{
       position:fixed;right:16px;bottom:18px;padding:10px 12px;border-radius:999px;
-      background:var(--navy);color:#fff;text-decoration:none;font-size:12px;border:1px solid #173150
+      background:var(--navy);color:#fff;text-decoration:none;font-size:12px;border:1px solid #173150;
+      text-decoration:none;
     }
     .top:hover{background:#0b2c55}
   </style>
@@ -187,8 +225,24 @@
       <p>실시간 공고·요건을 표준화 데이터로 분석하고, 전문가가 상황에 맞는 매칭을 투명하게 제시합니다.</p>
 
       <div class="btn-row" role="group" aria-label="핵심 행동">
-        <a class="cta" href="https://survey.youareplan.co.kr" target="_blank" rel="noopener">1분 만에 1차 진단 시작</a>
-        <a class="ghost" href="#apply">페이지에서 바로 작성</a>
+        <!-- Render 설문 URL -->
+        <a class="cta"
+           href="https://youareplan-landing.onrender.com"
+           target="_blank"
+           rel="noopener">
+          1분 만에 무료 진단 시작
+        </a>
+
+        <a class="cta-kakao"
+           href="https://pf.kakao.com/_LWxexmn/chat"
+           target="_blank"
+           rel="noopener">
+          카카오 채널로 1:1 상담
+        </a>
+
+        <a class="ghost" href="#apply">
+          페이지에서 바로 작성하기
+        </a>
       </div>
     </div>
   </header>
@@ -258,9 +312,9 @@
       <div class="wrap">
         <h2>자주 묻는 질문</h2>
         <div class="grid cols-3">
-          <div class="card"><strong>업력 없어도 가능한가요?</strong><br>예비창업 대상 프로그램도 있으니 1차 진단으로 확인.</div>
-          <div class="card"><strong>체납이 있으면 불가인가요?</strong><br>대부분 제한되지만 상황별 대안 검토 가능.</div>
-          <div class="card"><strong>기간은 얼마나 걸리나요?</strong><br>보통 2–6주. 기관/서류 준비도에 따라 달라집니다.</div>
+          <div class="card"><strong>업력 없어도 가능한가요?</strong><br>예비창업 대상 프로그램도 있으니 1차 진단으로 확인 가능합니다.</div>
+          <div class="card"><strong>체납이 있으면 불가인가요?</strong><br>대부분 제한되지만, 상황에 따라 대체 프로그램 검토가 가능합니다.</div>
+          <div class="card"><strong>기간은 얼마나 걸리나요?</strong><br>보통 2–6주 소요되며, 기관·서류 준비도에 따라 달라집니다.</div>
         </div>
       </div>
     </section>
@@ -268,8 +322,10 @@
     <!-- 설문 -->
     <section id="apply">
       <div class="wrap">
-        <h2>1차 진단 — 바로 작성</h2>
-        <iframe src="https://survey.youareplan.co.kr" title="유아플랜 1차 설문"></iframe>
+        <h2>1차 진단 — 페이지에서 바로 작성</h2>
+        <iframe
+          src="https://youareplan-landing.onrender.com"
+          title="유아플랜 1차 설문"></iframe>
       </div>
     </section>
 
@@ -282,7 +338,15 @@
             <p><strong>유아플랜 컨설팅</strong></p>
             <p>대표번호: 1661-8804</p>
             <p>이메일: <a href="mailto:youareplan@naver.com">youareplan@naver.com</a></p>
-            <p><a href="https://pf.kakao.com/_LWxexmn" target="_blank" rel="noopener">카카오톡 상담</a></p>
+            <p>
+              <a href="https://pf.kakao.com/_LWxexmn" target="_blank" rel="noopener">
+                카카오 채널 홈 바로가기
+              </a>
+              <br />
+              <a href="https://pf.kakao.com/_LWxexmn/chat" target="_blank" rel="noopener">
+                카카오 채널 1:1 채팅 연결
+              </a>
+            </p>
           </div>
           <div class="card">
             <strong>사업자 정보</strong>
@@ -302,7 +366,9 @@
   <footer>
     <div class="wrap">
       <div><strong>유아플랜 컨설팅</strong> · youareplan.co.kr</div>
-      <div class="policy"><a href="#">개인정보처리방침</a> · <a href="#">이용약관</a></div>
+      <div class="policy">
+        <a href="#">개인정보처리방침</a> · <a href="#">이용약관</a>
+      </div>
       <div class="notice">© 2025 YouArePlan Consulting. All rights reserved.</div>
     </div>
   </footer>
