--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
            href="https://youareplan-landing.onrender.com"
            target="_blank"
            rel="noopener">
-          1분 만에 무료 진단 시작
+          정책자금 무료 상담 신청
         </a>
 
         <a class="cta-kakao"
@@ -266,7 +266,7 @@
       <div class="wrap">
         <h2>서비스 구성</h2>
         <div class="grid cols-3">
-          <div class="card"><strong>① 1차 진단(무료)</strong><br>표준 설문으로 요건 적합성, 우선순위 후보를 빠르게 도출합니다.</div>
+          <div class="card"><strong>① 간편 상담 신청(무료)</strong><br>짧은 설문으로 기본 요건과 방향성을 빠르게 파악합니다.</div>
           <div class="card"><strong>② 컨설팅 & 서류 준비</strong><br>신청 전략 수립, 증빙 체크리스트, 제출 문서 검토/작성까지 전담 지원.</div>
           <div class="card"><strong>③ 실행 & 사후 추적</strong><br>접수/심사·보완 대응, 결과 리포트, 차기 스텝 가이드 제공.</div>
         </div>
@@ -284,7 +284,7 @@
           </div>
           <div class="row" role="row">
             <div class="cell" role="cell">2025-09-09</div>
-            <div class="cell" role="cell">정책자금 진단 서비스 오픈</div>
+            <div class="cell" role="cell">정책자금 상담 서비스 오픈</div>
           </div>
           <div class="row" role="row">
             <div class="cell" role="cell">2025-10 예정</div>
@@ -312,7 +312,7 @@
       <div class="wrap">
         <h2>자주 묻는 질문</h2>
         <div class="grid cols-3">
-          <div class="card"><strong>업력 없어도 가능한가요?</strong><br>예비창업 대상 프로그램도 있으니 1차 진단으로 확인 가능합니다.</div>
+          <div class="card"><strong>업력 없어도 가능한가요?</strong><br>예비창업 대상 프로그램도 있으니 간편 상담 후 확인 가능합니다.</div>
           <div class="card"><strong>체납이 있으면 불가인가요?</strong><br>대부분 제한되지만, 상황에 따라 대체 프로그램 검토가 가능합니다.</div>
           <div class="card"><strong>기간은 얼마나 걸리나요?</strong><br>보통 2–6주 소요되며, 기관·서류 준비도에 따라 달라집니다.</div>
         </div>
@@ -322,10 +322,10 @@
     <!-- 설문 -->
     <section id="apply">
       <div class="wrap">
-        <h2>1차 진단 — 페이지에서 바로 작성</h2>
+        <h2>정책자금 · 정부지원금 무료 상담 신청</h2>
         <iframe
           src="https://youareplan-landing.onrender.com"
-          title="유아플랜 1차 설문"></iframe>
+          title="유아플랜 상담 신청 폼"></iframe>
       </div>
     </section>
 
