--- a/index.html
+++ b/index.html
@@ -136,15 +136,6 @@
       min-width:220px;
     }
     .cta:hover{transform:translateY(-3px);background:#004a92}
-    .ghost{
-      display:inline-block;
-      padding:12px 16px;
-      border-radius:10px;
-      border:1px solid var(--border);
-      text-decoration:none;
-      color:#0b1b2b;
-      background:#fff;
-    }
     .cta-kakao{
       display:inline-block;
       background:var(--kakao);
@@ -178,15 +169,6 @@
     .row:first-child{border-top:none}
     .cell{padding:12px 16px}
     .head{background:#f8fafc;font-weight:700}
-
-    /* 설문 임베드 */
-    iframe{
-      width:100%;
-      border:1px solid var(--border);
-      border-radius:var(--radius);
-      min-height:720px;
-      background:#fff;
-    }
 
     /* Footer */
     footer{padding:36px 20px;color:#6b7280;background:#f9fafb}
@@ -225,7 +207,7 @@
       <p>실시간 공고·요건을 표준화 데이터로 분석하고, 전문가가 상황에 맞는 매칭을 투명하게 제시합니다.</p>
 
       <div class="btn-row" role="group" aria-label="핵심 행동">
-        <!-- Render 설문 URL -->
+        <!-- Render 설문 URL만 별도 탭으로 열리게 -->
         <a class="cta"
            href="https://youareplan-landing.onrender.com"
            target="_blank"
@@ -238,10 +220,6 @@
            target="_blank"
            rel="noopener">
           카카오 채널로 1:1 상담
-        </a>
-
-        <a class="ghost" href="#apply">
-          페이지에서 바로 작성하기
         </a>
       </div>
     </div>
@@ -316,16 +294,6 @@
           <div class="card"><strong>체납이 있으면 불가인가요?</strong><br>대부분 제한되지만, 상황에 따라 대체 프로그램 검토가 가능합니다.</div>
           <div class="card"><strong>기간은 얼마나 걸리나요?</strong><br>보통 2–6주 소요되며, 기관·서류 준비도에 따라 달라집니다.</div>
         </div>
-      </div>
-    </section>
-
-    <!-- 설문 -->
-    <section id="apply">
-      <div class="wrap">
-        <h2>정책자금 · 정부지원금 무료 상담 신청</h2>
-        <iframe
-          src="https://youareplan-landing.onrender.com"
-          title="유아플랜 상담 신청 폼"></iframe>
       </div>
     </section>
 
