Enhance image styles and update KakaoTalk link
Updated image styles for better visibility in dark mode and changed KakaoTalk link to use HTTP.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,15 @@
       gap:10px;
     }
     .brand-mini img{
-      height:30px;width:auto;display:block;
+      height:30px;
+      width:auto;
+      display:block;
+      /* 다크 모드에서도 잘 보이게 보정 */
+      filter:
+        brightness(1.8)
+        contrast(1.1)
+        drop-shadow(0 0 2px rgba(15,23,42,.9))
+        drop-shadow(0 0 8px rgba(248,250,252,.95));
     }
     .brand-mini span{
       font-weight:700;
@@ -521,7 +529,7 @@
             <span>설문 30초면 충분</span>
           </a>
           <a class="btn-kakao"
-             href="https://pf.kakao.com/_LWxexmn/chat"
+             href="http://pf.kakao.com/_LWxexmn/chat"
              target="_blank"
              rel="noopener">
             카카오톡 1:1 상담
@@ -727,7 +735,7 @@
                 정책자금 무료 상담 신청
               </a>
               <a class="btn-kakao"
-                 href="https://pf.kakao.com/_LWxexmn/chat"
+                 href="http://pf.kakao.com/_LWxexmn/chat"
                  target="_blank"
                  rel="noopener">
                 카카오톡 1:1 상담
